--- a/app/src/main/res/layout/activity_edit_team.xml
+++ b/app/src/main/res/layout/activity_edit_team.xml
@@ -98,7 +98,7 @@
                 android:id="@+id/txtTimezone"
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
-                android:inputType="text"
+                android:inputType="textNoSuggestions"
                 android:hint="ex.: (UTC-03:00) Brasilia"
                 android:background="@drawable/spinner_background"
                 android:textSize="16sp"
@@ -134,8 +134,8 @@
 
         <ImageButton
             android:id="@+id/btnBack"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
             android:background="?android:attr/selectableItemBackgroundBorderless"
             android:contentDescription="BackButton"
             android:src="@drawable/baseline_arrow_back_24"
