--- a/app/src/main/res/layout/activity_goals.xml
+++ b/app/src/main/res/layout/activity_goals.xml
@@ -12,7 +12,132 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:gravity="center_horizontal">
+        android:gravity="center_horizontal"
+        android:layout_marginTop="60dp">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginBottom="10dp"
+            android:layout_marginStart="15dp"
+            android:layout_marginEnd="15dp">
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Metas de Emissões"
+                android:textSize="20sp"
+                android:textColor="?android:attr/textColorPrimary"
+                android:textStyle="bold"/>
+
+            <LinearLayout
+                android:id="@+id/btnGoals"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_gravity="bottom"
+                android:background="?android:attr/selectableItemBackground"
+                android:focusable="true"
+                android:clickable="true"
+                android:visibility="visible">
+
+                <ImageView
+                    android:layout_width="14dp"
+                    android:layout_height="14dp"
+                    android:layout_gravity="center"
+                    android:src="@drawable/baseline_edit_24"
+                    app:tint="?android:attr/iconTint"
+                    android:layout_marginEnd="2dp"/>
+
+                <TextView
+                    android:layout_gravity="center"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="?android:attr/textColorPrimary"
+                    android:text="Editar Metas"
+                    android:textSize="14sp"
+                    android:layout_marginEnd="10dp"/>
+            </LinearLayout>
+
+        </LinearLayout>
+
+        <TextView
+            android:text="Diária"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textStyle="bold"
+            android:textColor="?android:attr/textColorPrimary"
+            android:textSize="14sp"
+            android:layout_marginStart="15dp"
+            android:layout_marginEnd="15dp"/>
+
+
+        <TextView
+            android:id="@+id/txtDailyGoal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            tools:text="1000ton"
+            android:textSize="18sp"
+            android:layout_marginStart="17dp"
+            android:layout_marginEnd="15dp"/>
+
+        <TextView
+            android:text="Semanal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textStyle="bold"
+            android:textColor="?android:attr/textColorPrimary"
+            android:textSize="14sp"
+            android:layout_marginStart="15dp"
+            android:layout_marginEnd="15dp"/>
+
+        <TextView
+            android:id="@+id/txtWeeklyGoal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            tools:text="7000ton"
+            android:textSize="18sp"
+            android:layout_marginStart="17dp"
+            android:layout_marginEnd="15dp"/>
+
+        <TextView
+            android:text="Mensal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textStyle="bold"
+            android:textColor="?android:attr/textColorPrimary"
+            android:textSize="14sp"
+            android:layout_marginStart="15dp"
+            android:layout_marginEnd="15dp"/>
+
+        <TextView
+            android:id="@+id/txtMonthlyGoal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            tools:text="30000ton"
+            android:textSize="18sp"
+            android:layout_marginStart="17dp"
+            android:layout_marginEnd="15dp"/>
+
+        <TextView
+            android:text="Anual"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textStyle="bold"
+            android:textColor="?android:attr/textColorPrimary"
+            android:textSize="14sp"
+            android:layout_marginStart="15dp"
+            android:layout_marginEnd="15dp"/>
+
+        <TextView
+            android:id="@+id/txtAnnualGoal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            tools:text="365000ton"
+            android:textSize="18sp"
+            android:layout_marginStart="17dp"
+            android:layout_marginEnd="15dp"/>
 
     </LinearLayout>
 
@@ -25,8 +150,8 @@
 
         <ImageButton
             android:id="@+id/btnBack"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
             android:background="?android:attr/selectableItemBackgroundBorderless"
             android:contentDescription="BackButton"
             android:src="@drawable/baseline_arrow_back_24"
