--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -17,23 +17,117 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:layout_gravity="center"
-            android:gravity="center"
-            android:layout_marginStart="15dp"
-            android:layout_marginEnd="15dp">
+            android:gravity="center">
 
             <ImageView
-                android:layout_width="120dp"
-                android:layout_height="120dp"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
                 android:contentDescription="LogoApp"
                 android:src="@drawable/logo_transparent"
                 android:layout_marginBottom="20dp"/>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:gravity="center"
+                android:layout_gravity="center"
+                android:padding="16dp">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_gravity="center"
+                    android:gravity="center">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/step_circle_active"
+                        android:gravity="center"
+                        android:text="1"
+                        android:textColor="@android:color/white"
+                        android:textSize="16sp"/>
+
+                    <View
+                        android:id="@+id/midStep1"
+                        android:layout_width="60dp"
+                        android:layout_height="4dp"
+                        android:background="@color/gray"/>
+
+                    <TextView
+                        android:id="@+id/step2"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/step_circle_inactive"
+                        android:gravity="center"
+                        android:text="2"
+                        android:textColor="@android:color/black"
+                        android:textSize="16sp"/>
+
+                    <View
+                    android:id="@+id/midStep2"
+                    android:layout_width="60dp"
+                    android:layout_height="4dp"
+                    android:background="@color/gray"/>
+
+                    <TextView
+                        android:id="@+id/step3"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/step_circle_inactive"
+                        android:gravity="center"
+                        android:text="3"
+                        android:textColor="@android:color/black"
+                        android:textSize="16sp"/>
+                </LinearLayout>
+
+
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_gravity="center"
+                    android:gravity="center">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Contato"/>
+
+                    <View
+                        android:layout_width="55dp"
+                        android:layout_height="4dp"
+                        android:background="@color/transparent"/>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Dados"/>
+
+                    <View
+                        android:layout_width="65dp"
+                        android:layout_height="4dp"
+                        android:background="@color/transparent"/>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Senha"/>
+
+                </LinearLayout>
+
+            </LinearLayout>
 
         <LinearLayout
             android:id="@+id/linearInformation"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:visibility="visible">
+            android:visibility="visible"
+            android:layout_marginStart="15dp"
+            android:layout_marginEnd="15dp">
 
             <TextView
                 android:text="Nome Completo"
@@ -125,7 +219,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:visibility="gone">
+                android:visibility="gone"
+                android:layout_marginStart="15dp"
+                android:layout_marginEnd="15dp">
 
             <TextView
                 android:text="Nacionalidade"
@@ -141,7 +237,8 @@
                 android:id="@+id/txtNationality"
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
-                android:inputType="text"
+                android:inputType="textNoSuggestions"
+                android:paddingStart="16dp"
                 android:hint="ex.: Brasileiro"
                 android:background="@drawable/spinner_background"
                 android:textSize="16sp"
@@ -198,7 +295,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:visibility="gone">
+                android:visibility="gone"
+                android:layout_marginStart="15dp"
+                android:layout_marginEnd="15dp">
 
                 <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/passwordLayout"
@@ -237,7 +336,9 @@
                 android:id="@+id/btnActionContainer"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp">
+                android:layout_marginTop="10dp"
+                android:layout_marginStart="15dp"
+                android:layout_marginEnd="15dp">
 
                 <Button
                     android:id="@+id/btnAction"
@@ -256,6 +357,8 @@
                     android:visibility="gone"
                     android:indeterminateTint="@color/white"
                     android:indeterminateTintMode="src_in"/>
+
+
             </FrameLayout>
 
             <FrameLayout
@@ -263,7 +366,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:visibility="gone">
+                android:visibility="gone"
+                android:layout_marginStart="15dp"
+                android:layout_marginEnd="15dp">
 
                 <Button
                     android:id="@+id/btnSignUp"
@@ -284,6 +389,18 @@
                     android:indeterminateTintMode="src_in"/>
             </FrameLayout>
 
+
+            <TextView
+                android:id="@+id/btnStepBack"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Voltar passo"
+                android:clickable="true"
+                android:focusable="true"
+                android:background="?android:attr/selectableItemBackground"
+                android:layout_marginTop="10dp"
+                android:visibility="gone"/>
+
         </LinearLayout>
     </ScrollView>
 
@@ -296,8 +413,8 @@
 
         <ImageButton
             android:id="@+id/btnBack"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
             android:background="?android:attr/selectableItemBackgroundBorderless"
             android:contentDescription="BackButton"
             android:src="@drawable/baseline_arrow_back_24"
