--- a/app/src/main/res/layout/team_layout.xml
+++ b/app/src/main/res/layout/team_layout.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="70dp"
+    android:layout_height="wrap_content"
     android:orientation="vertical">
 
     <LinearLayout
@@ -18,12 +18,12 @@
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/imgTeam"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
         android:layout_gravity="center"
         android:src="@drawable/default_image"
         tools:src="@drawable/e"
-        android:layout_marginStart="10dp"/>
+        android:layout_marginStart="20dp"/>
 
     <LinearLayout
         android:layout_width="0dp"
@@ -32,7 +32,7 @@
         android:layout_gravity="center"
         android:orientation="vertical"
         android:layout_marginEnd="10dp"
-        android:layout_marginStart="10dp">
+        android:layout_marginStart="15dp">
 
             <TextView
                 android:id="@+id/txtName"
@@ -78,7 +78,7 @@
         android:background="?attr/selectableItemBackgroundBorderless"
         app:tint="?android:attr/iconTint"
         android:scaleType="fitXY"
-        android:layout_marginEnd="10dp"/>
+        android:layout_marginEnd="15dp"/>
     </LinearLayout>
 
     <View
