--- a/app/src/main/res/drawable/button_border.xml
+++ b/app/src/main/res/drawable/button_border.xml
@@ -4,16 +4,18 @@
 
     <item android:id="@android:id/mask">
         <shape>
-            <corners android:radius="250dp"/>
+            <corners android:radius="15dp"/>
             <solid android:color="@android:color/white"/>
         </shape>
     </item>
 
     <item>
         <shape>
-            <solid android:color="@color/green"/>
-            <corners android:radius="250dp"/>
-            <padding android:left="12dp" android:top="12dp" android:right="12dp" android:bottom="12dp" />
+            <solid android:color="?attr/homeBackground"/>
+            <corners android:radius="15dp"/>
+            <stroke
+                android:width="2dp"
+                android:color="@color/greenDark"/>
         </shape>
     </item>
 </ripple>
