--- a/app/src/main/res/layout/activity_team_goals.xml
+++ b/app/src/main/res/layout/activity_team_goals.xml
@@ -6,19 +6,21 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".teams.GoalsActivity">
+    tools:context=".teams.TeamGoalsActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:gravity="center_horizontal"
-        android:layout_marginTop="60dp">
+        android:layout_marginTop="52dp">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="30dp"
             android:orientation="horizontal"
+            android:layout_gravity="center_vertical"
+            android:layout_marginTop="20dp"
             android:layout_marginBottom="10dp"
             android:layout_marginStart="15dp"
             android:layout_marginEnd="15dp">
@@ -26,6 +28,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:layout_gravity="center"
                 android:text="Metas de Emissões"
                 android:textSize="20sp"
                 android:textColor="?android:attr/textColorPrimary"
@@ -34,13 +37,15 @@
             <LinearLayout
                 android:id="@+id/btnGoals"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:orientation="horizontal"
-                android:layout_gravity="bottom"
-                android:background="?android:attr/selectableItemBackground"
+                android:layout_gravity="center"
+                android:background="@drawable/rounded_background"
                 android:focusable="true"
                 android:clickable="true"
-                android:visibility="visible">
+                android:visibility="visible"
+                android:paddingStart="10dp"
+                android:paddingEnd="5dp">
 
                 <ImageView
                     android:layout_width="14dp"
@@ -62,25 +67,33 @@
 
         </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:padding="15dp"
+        android:background="@drawable/home_background"
+        android:layout_marginBottom="10dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginEnd="15dp">
+
         <TextView
             android:text="Diária"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textStyle="bold"
             android:textColor="?android:attr/textColorPrimary"
-            android:textSize="14sp"
-            android:layout_marginStart="15dp"
-            android:layout_marginEnd="15dp"/>
+            android:textSize="16sp"/>
 
 
         <TextView
             android:id="@+id/txtDailyGoal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            tools:text="1000ton"
-            android:textSize="18sp"
-            android:layout_marginStart="17dp"
-            android:layout_marginEnd="15dp"/>
+            tools:text="1 mil toneladas"
+            android:textSize="20sp"
+            android:layout_marginStart="2dp"
+            android:layout_marginBottom="20dp"/>
 
         <TextView
             android:text="Semanal"
@@ -88,18 +101,16 @@
             android:layout_height="wrap_content"
             android:textStyle="bold"
             android:textColor="?android:attr/textColorPrimary"
-            android:textSize="14sp"
-            android:layout_marginStart="15dp"
-            android:layout_marginEnd="15dp"/>
+            android:textSize="16sp"/>
 
         <TextView
             android:id="@+id/txtWeeklyGoal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            tools:text="7000ton"
-            android:textSize="18sp"
-            android:layout_marginStart="17dp"
-            android:layout_marginEnd="15dp"/>
+            tools:text="7 mil toneladas"
+            android:textSize="20sp"
+            android:layout_marginStart="2dp"
+            android:layout_marginBottom="20dp"/>
 
         <TextView
             android:text="Mensal"
@@ -107,18 +118,16 @@
             android:layout_height="wrap_content"
             android:textStyle="bold"
             android:textColor="?android:attr/textColorPrimary"
-            android:textSize="14sp"
-            android:layout_marginStart="15dp"
-            android:layout_marginEnd="15dp"/>
+            android:textSize="16sp"/>
 
         <TextView
             android:id="@+id/txtMonthlyGoal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            tools:text="30000ton"
-            android:textSize="18sp"
-            android:layout_marginStart="17dp"
-            android:layout_marginEnd="15dp"/>
+            tools:text="30 mil toneladas"
+            android:textSize="20sp"
+            android:layout_marginStart="2dp"
+            android:layout_marginBottom="20dp"/>
 
         <TextView
             android:text="Anual"
@@ -126,53 +135,66 @@
             android:layout_height="wrap_content"
             android:textStyle="bold"
             android:textColor="?android:attr/textColorPrimary"
-            android:textSize="14sp"
-            android:layout_marginStart="15dp"
-            android:layout_marginEnd="15dp"/>
+            android:textSize="16sp"/>
 
         <TextView
             android:id="@+id/txtAnnualGoal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            tools:text="365000ton"
-            android:textSize="18sp"
-            android:layout_marginStart="17dp"
-            android:layout_marginEnd="15dp"/>
+            tools:text="365 mil toneladas"
+            android:textSize="20sp"
+            android:layout_marginStart="2dp"
+            android:layout_marginBottom="20dp"/>
+
+    </LinearLayout>
 
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:orientation="horizontal"
-        android:layout_gravity="top"
-        android:background="?android:attr/colorBackground">
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_gravity="top">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:orientation="horizontal"
+            android:layout_gravity="top"
+            android:background="?android:attr/colorBackground">
 
-        <ImageButton
-            android:id="@+id/btnBack"
-            android:layout_width="25dp"
-            android:layout_height="25dp"
-            android:background="?android:attr/selectableItemBackgroundBorderless"
-            android:contentDescription="BackButton"
-            android:src="@drawable/baseline_arrow_back_24"
-            android:scaleType="fitXY"
-            app:tint="?android:attr/iconTint"
-            android:layout_margin="15dp"
-            android:layout_gravity="center_vertical"
-            android:clickable="true"/>
+            <ImageButton
+                android:id="@+id/btnBack"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:background="?android:attr/selectableItemBackgroundBorderless"
+                android:contentDescription="BackButton"
+                android:src="@drawable/baseline_arrow_back_24"
+                android:scaleType="fitXY"
+                app:tint="?android:attr/iconTint"
+                android:layout_margin="15dp"
+                android:layout_gravity="center_vertical"
+                android:clickable="true"/>
 
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:layout_gravity="center"
-            android:text="Metas da Equipe"
-            android:textAlignment="center"
-            android:textColor="?android:attr/textColorPrimary"
-            android:textSize="16sp"
-            android:textStyle="bold"
-            android:layout_marginEnd="60dp"
-            />
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:layout_gravity="center"
+                android:text="Metas"
+                android:textAlignment="center"
+                android:textColor="?android:attr/textColorPrimary"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                android:layout_marginEnd="60dp"/>
+
+
+        </LinearLayout>
+
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:background="?android:attr/colorForeground"/>
 
     </LinearLayout>
 </RelativeLayout>
