--- a/app/src/main/res/layout/activity_usersettings.xml
+++ b/app/src/main/res/layout/activity_usersettings.xml
@@ -9,15 +9,13 @@
 
 <ScrollView
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:layout_marginTop="52dp">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:layout_gravity="center"
-        android:gravity="center"
-        android:layout_marginTop="35dp"
         android:layout_marginStart="15dp"
         android:layout_marginEnd="15dp">
             <LinearLayout
@@ -26,7 +24,8 @@
                 android:orientation="vertical"
                 android:gravity="center"
                 android:layout_gravity="center"
-                android:layout_marginBottom="15dp">
+                android:layout_marginBottom="15dp"
+                android:layout_marginTop="10dp">
 
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/imgProfile"
@@ -52,109 +51,135 @@
             </com.facebook.shimmer.ShimmerFrameLayout>
             </LinearLayout>
 
-                <com.google.android.material.textfield.TextInputLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="Nome de Usuário"
-                    android:layout_marginBottom="15dp">
+        <LinearLayout
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
-                    <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/txtUsername"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:text="carregando..."
-                        android:inputType="textEmailAddress"
-                        android:enabled="false"
-                        android:clickable="true"/>
-                </com.google.android.material.textfield.TextInputLayout>
-
-
-                <com.google.android.material.textfield.TextInputLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="Nome Completo"
-                    android:layout_marginBottom="15dp">
-
-                    <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/txtFullname"
-                        android:text="carregando..."
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:inputType="textEmailAddress"
-                        android:enabled="false"/>
-
-                </com.google.android.material.textfield.TextInputLayout>
-
-                <com.google.android.material.textfield.TextInputLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="Email"
-                    android:layout_marginBottom="15dp">
-
-                    <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/txtEmail"
-                        android:text="carregando..."
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:inputType="textEmailAddress"
-                        android:enabled="false"/>
-
-                </com.google.android.material.textfield.TextInputLayout>
-
-                <TextView
-                    android:text="Gênero"
-                    android:layout_gravity="start"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textColor="?android:attr/textColorPrimary"
-                    android:textSize="12sp"
-                    android:visibility="visible"
-                    android:layout_marginStart="12dp"
-                    android:layout_marginBottom="2dp"/>
-
-                <Spinner
-                    android:id="@+id/txtGender"
-                    android:layout_width="match_parent"
-                    android:layout_height="60dp"
-                    android:spinnerMode="dialog"
-                    android:entries="@array/gender_arrayB"
-                    android:background="@drawable/spinner_background"
-                    android:layout_marginBottom="15dp"/>
-
-                <com.google.android.material.textfield.TextInputLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="60dp"
-                    android:hint="Nacionalidade"
-                    android:layout_marginBottom="15dp">
-
-                    <com.google.android.material.textfield.MaterialAutoCompleteTextView
-                        android:id="@+id/txtNationality"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:inputType="text"
-                        android:text="carregando..."
-                        android:enabled="false"
-                        android:textSize="16sp"
-                        android:textColor="@color/disabled"
-                        android:paddingStart="15dp"
-                        />
-
-                </com.google.android.material.textfield.TextInputLayout>
-
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/btnDelete"
-                android:layout_width="match_parent"
+            <!-- Username Label and EditText -->
+            <TextView
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Excluir minha conta"
-                app:icon="@drawable/baseline_delete_24"
-                app:iconSize="20dp"
-                app:iconTint="@color/red"
-                app:iconPadding="5dp"
-                app:iconGravity="textStart"
-                android:backgroundTint="?android:attr/colorBackground"
-                android:textColor="@color/red"
+                android:text="Nome de Usuário"
+                android:textColor="?android:attr/textColorPrimary"
+                android:textSize="12sp"
                 android:textStyle="bold"
-                android:textSize="16sp"/>
+            android:layout_marginBottom="2dp"/>
+
+            <EditText
+                android:id="@+id/txtUsername"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:textSize="16sp"
+                android:text="carregando..."
+                android:inputType="textEmailAddress"
+                android:enabled="false"
+                android:textColor="@color/disabled"
+                android:background="@drawable/spinner_background"
+                android:layout_marginBottom="15dp"/>
+
+            <!-- Full Name Label and EditText -->
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Nome Completo"
+                android:textColor="?android:attr/textColorPrimary"
+                android:textSize="12sp"
+                android:textStyle="bold"
+            android:layout_marginBottom="2dp"/>
+
+            <EditText
+                android:id="@+id/txtFullname"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+            android:text="carregando..."
+            android:inputType="text"
+                android:textSize="16sp"
+            android:enabled="false"
+            android:textColor="@color/disabled"
+            android:background="@drawable/spinner_background"
+            android:layout_marginBottom="15dp"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="E-mail"
+                android:textColor="?android:attr/textColorPrimary"
+                android:textSize="12sp"
+                android:textStyle="bold"
+            android:layout_marginBottom="2dp"/>
+
+            <EditText
+                android:id="@+id/txtEmail"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+            android:text="carregando..."
+            android:inputType="textEmailAddress"
+            android:enabled="false"
+                android:textSize="16sp"
+            android:textColor="@color/disabled"
+            android:background="@drawable/spinner_background"
+            android:layout_marginBottom="15dp"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Gênero"
+                android:textColor="?android:attr/textColorPrimary"
+                android:textSize="12sp"
+                android:textStyle="bold"
+            android:layout_marginBottom="2dp"/>
+
+            <Spinner
+                android:id="@+id/txtGender"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:spinnerMode="dialog"
+                android:entries="@array/gender_arrayB"
+                android:background="@drawable/spinner_background"
+                android:layout_marginBottom="15dp"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Nacionalidade"
+                android:textColor="?android:attr/textColorPrimary"
+                android:textSize="12sp"
+                android:textStyle="bold"
+            android:layout_marginBottom="2dp"/>
+
+            <AutoCompleteTextView
+                android:id="@+id/txtNationality"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+            android:inputType="text"
+            android:text="carregando..."
+            android:enabled="false"
+            android:textColor="@color/disabled"
+            android:textSize="16sp"
+            android:paddingStart="15dp"
+            android:background="@drawable/spinner_background"
+            android:layout_marginBottom="10dp"/>
+
+        </LinearLayout>
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/btnDelete"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Excluir minha conta"
+            app:icon="@drawable/baseline_delete_24"
+            app:iconSize="20dp"
+            app:iconTint="?android:attr/iconTint"
+            app:iconPadding="5dp"
+            app:iconGravity="textStart"
+            android:backgroundTint="?attr/homeBackground"
+            android:padding="15dp"
+            android:textColor="?android:attr/textColorPrimary"
+            android:textStyle="bold"
+            android:textSize="16sp"
+            app:rippleColor="?attr/colorControlHighlight"/>
 
     </LinearLayout>
 
@@ -163,47 +188,61 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_gravity="top"
-        android:background="?android:attr/colorBackground">
+        android:orientation="vertical"
+        android:layout_gravity="top">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:orientation="horizontal"
+            android:layout_gravity="top"
+            android:background="?android:attr/colorBackground">
 
-        <ImageButton
-            android:id="@+id/btnBack"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:background="@null"
-            android:contentDescription="BackButton"
-            android:src="@drawable/baseline_arrow_back_24"
-            android:scaleType="fitXY"
-            app:tint="?android:attr/iconTint"
-            android:layout_margin="15dp"
-            android:layout_gravity="center_vertical"
-            android:clickable="true"/>
+            <ImageButton
+                android:id="@+id/btnBack"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:background="?android:attr/selectableItemBackgroundBorderless"
+                android:contentDescription="BackButton"
+                android:src="@drawable/baseline_arrow_back_24"
+                android:scaleType="fitXY"
+                app:tint="?android:attr/iconTint"
+                android:layout_margin="15dp"
+                android:layout_gravity="center_vertical"
+                android:clickable="true"/>
 
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:layout_gravity="center"
-            android:text="Informações do Usuário"
-            android:textAlignment="center"
-            android:textColor="?android:attr/textColorPrimary"
-            android:textSize="16sp"
-            android:textStyle="bold"
-            />
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:layout_gravity="center"
+                android:text="Informações do Usuário"
+                android:textAlignment="center"
+                android:textColor="?android:attr/textColorPrimary"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                />
 
-        <ImageButton
-            android:id="@+id/btnEdit"
-            android:layout_width="25dp"
-            android:layout_height="25dp"
-            android:background="@null"
-            android:contentDescription="EditButton"
-            android:src="@drawable/baseline_edit_24"
-            android:scaleType="fitXY"
-            app:tint="?android:attr/iconTint"
-            android:layout_margin="15dp"
-            android:layout_gravity="center_vertical"
-            android:clickable="true"/>
+            <ImageButton
+                android:id="@+id/btnEdit"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:background="@null"
+                android:contentDescription="EditButton"
+                android:src="@drawable/baseline_edit_24"
+                android:scaleType="fitXY"
+                app:tint="?android:attr/iconTint"
+                android:layout_margin="15dp"
+                android:layout_gravity="center_vertical"
+                android:clickable="true"/>
+
+
+        </LinearLayout>
+
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:background="?android:attr/colorForeground"/>
 
     </LinearLayout>
 
