--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,13 +6,12 @@
     </style>
 
     <style name="CustomButtonStyle" parent="Widget.Material3.Button">
-        <item name="android:background">@drawable/round_button</item>
-        <item name="android:textColor">?attr/buttonText</item>
+        <item name="android:background">@drawable/button_border</item> <!-- Change to your new drawable -->
+        <item name="android:textColor">@color/greenDark</item> <!-- Set specific text color -->
         <item name="android:padding">12dp</item>
         <item name="android:textSize">16sp</item>
         <item name="android:textStyle">bold</item>
         <item name="android:textAllCaps">false</item>
         <item name="android:textAlignment">center</item>
     </style>
-
 </resources>
